
5.2a2 -> 5.2a3:
    - jbj: blueprint/use yum:{primary,filelists,other}.xml queryformats.
    - jbj: install yum:{primary,filelists,other}.xml queryformats.
    - jbj: use poptReadFile with retrofit for popt < 1.15.
    - jbj: rude & crude backing store for --queryformat templates.
    - proyvind: xzdio: accept compression level 0 - 9 (new '0' = former '1' etc.).
    - proyvind: don't wipe out $DOCDIR when using %doc as it will wipe out any
	files that would happen to be installed during %install.
    - jbj: add POPT_ARGFLAG_TOGGLE sufficient to test (invisible w popt < 1.15).
    - jbj: enable the PLD dependency filtering.
    - jbj: PLD: rpm-pld-autodep: add run-time disablers, attempt miRE's instead.
    - jbj: PLD: rpm-noexpand: Don't expand macros in %changelog.
    - jbj: PLD: rpm-pld-autodep: merge and simplify. entirely dysfunctional ...
    - jbj: PLD: rpm-notsc: Don't use rdtsc timing.
    - jbj: PLD: rpm-popt-aliases: Add --downgrade/--norepackage aliases.
    - jbj: PLD: rpm-epoch0: Always add Epoch: 0 to packages.
    - jbj: handle "config(N) = E:V-R" within rpmns.c (but treat as a string).
    - rpm.org: Don't try to create "" directories.
    - rpm.org: Don't bother calculating string sizes manually.
    - rpm.org: memory used by lua gets freed (just remove comment).
    - rpm.org: repeated read config -> free config needs globalLuaState == NULL.
    - rpm.org: Fix buffer overflow on oversized filelist entries(susebz#397006).
    - jbj: rpmdigest: avoid segfault on named pipes and other uglix fauna.
    - jbj: pcre: finalize --with-pcre=internal building.
    - jbj: pcre: punish PLD with internal bloat until the trivial AutoFu exists.
    - jbj: rpmbuild: use anchored patterns for data validation.
    - jbj: move rpmgrep and man page from rpmio/ to tools/ and install.
    - jbj: EVRtuple: eliminate the old EVR parser.
    - jbj: rpmbuild: enumerate all the lexical patterns in parsePreamble().